2005/9/22 -- released version 20050922_trunk

2005/9/21 -- released version 20050921_trunk

2005/9/20 -- released version 20050920_trunk

2005/9/19 -- released version 20050919_trunk

2005/9/18 -- released version 20050918_trunk

2005/9/17 -- released version 20050917_trunk

2005/9/16 -- released version 20050916_trunk

2005/9/15 -- released version 20050915_trunk

* reload the config file on HUP signal and switch to the new one if it 
  isn't broken. After reloading, restart gracefully so that no measurement is
  interrupted. The signal can also be triggered by 'smokeping --reload'.
  -- niko, suggested by Taisuke Yamada <tyamadajp *list.rakugaki.org>

2005/9/14 -- released version 20050914_trunk

* made some alert docs in smokeping_config visible --niko

2005/9/13 -- released version 20050913_trunk

* optionally only send alerts when the state changes ('edgetrigger')
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>

2005/9/12 -- released version 20050912_trunk

2005/9/11 -- released version 20050911_trunk

2005/9/10 -- released version 20050910_trunk

* try to trigger an alert with the minimum number of values needed for it
  rather than require a stack with the maximum number of possible values.
  See http://lists.ee.ethz.ch/smokeping-users/msg01654.html for the problem.
  -- niko, reported by Leos Bitto <smokeping *leos.cz>

2005/9/9 -- released version 20050909_trunk

2005/9/8 -- released version 20050908_trunk

2005/9/7 -- released version 20050907_trunk

* automatically regenerate the logo images if Smokeping.pm has been updated --niko

2005/9/6 -- released version 20050906_trunk

2005/9/5 -- released version 20050905_trunk

* don't create directories in "datadir" when running as a CGI
  -- niko
* the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
  by specifying the new configuration variable "dyndir" 
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>