@@ -1,3 +1,5 @@
+2005/9/23 -- released version 20050923_trunk
+
 2005/9/22 -- released version 20050922_trunk
 
 2005/9/21 -- released version 20050921_trunk
